--- a/self_driving_cars/index.html
+++ b/self_driving_cars/index.html
@@ -3,9 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World editor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> World editor </h1>
     <canvas id="myCanvas"></canvas>
+    <div id="controls">
+        <button onclick="addRandomPoint()">Add point</button>
+        <button onclick="addRandomSegment()">Add segment</button>
+        <button onclick="removeRandomSegment()">Remove segment</button>
+        <button onclick="removeRandomPoint()">Remove point</button>
+        <button onclick="RemoveAll()">Remove all</button>
+    </div>
+
+    <script src="js/primitives/point.js"></script>
+    <script src="js/primitives/segment.js"></script>
+    <script src="js/math/graph.js"></script>
+    <script src="js/graphEditor.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
