implemented graph editor. The canvas listens to click events

--- a/self_driving_cars/index.html
+++ b/self_driving_cars/index.html
@@ -16,10 +16,11 @@
         <button onclick="RemoveAll()">Remove all</button>
     </div>
 
+    <script src="js/graphEditor.js"></script>
+    <script src="js/math/utils.js"></script>
+    <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
-    <script src="js/math/graph.js"></script>
-    <script src="js/graphEditor.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
