implemented dynamic viewport and serialization

--- a/self_driving_cars/index.html
+++ b/self_driving_cars/index.html
@@ -9,14 +9,13 @@
     <h1> World editor </h1>
     <canvas id="myCanvas"></canvas>
     <div id="controls">
-        <button onclick="addRandomPoint()">Add point</button>
-        <button onclick="addRandomSegment()">Add segment</button>
-        <button onclick="removeRandomSegment()">Remove segment</button>
-        <button onclick="removeRandomPoint()">Remove point</button>
-        <button onclick="RemoveAll()">Remove all</button>
+        <button onclick="dispose()">Dispose</button>
+        <button onclick="save()">Save</button>
+        
     </div>
 
     <script src="js/graphEditor.js"></script>
+    <script src="js/viewport.js"></script>
     <script src="js/math/utils.js"></script>
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
