--- a/self_driving_cars/index.html
+++ b/self_driving_cars/index.html
@@ -20,6 +20,8 @@
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
+    <script src="js/primitives/polygon.js"></script>
+    <script src="js/primitives/envelope.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
