--- a/self_driving_cars/index.html
+++ b/self_driving_cars/index.html
@@ -14,6 +14,7 @@
         
     </div>
 
+    <script src="js/world.js"></script>
     <script src="js/graphEditor.js"></script>
     <script src="js/viewport.js"></script>
     <script src="js/math/utils.js"></script>
