--- a/self-driving-car/index.html
+++ b/self-driving-car/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <canvas id="myCanvas"></canvas>
+    <script src="js/network.js"></script>
     <script src="js/sensor.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/controls.js"></script>
