--- a/self-driving-car/index.html
+++ b/self-driving-car/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
+    <script src="js/visualizer.js"></script>
     <script src="js/network.js"></script>
     <script src="js/sensor.js"></script>
     <script src="js/utils.js"></script>
