--- a/self-driving-car/index.html
+++ b/self-driving-car/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button onclick="save()">Save</button>    
+        <button onclick="discard()">Discard</button>    
+    </div>
     <canvas id="networkCanvas"></canvas>
     <script src="js/visualizer.js"></script>
     <script src="js/network.js"></script>
