implemented self driving

--- a/self-driving-car/index.html
+++ b/self-driving-car/index.html
@@ -12,6 +12,7 @@
     <div id="verticalButtons">
         <button onclick="save()">Save</button>    
         <button onclick="discard()">Discard</button>    
+        <button onclick="nextGeneration()">Next gen</button>    
     </div>
     <canvas id="networkCanvas"></canvas>
     <script src="js/visualizer.js"></script>
